# mesh-net

./: .gitignore  LICENSE  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android-service/: build.gradle  build.gradle.kts  proguard-rules.pro
android-service-native/: build.gradle
android-service-native/src/main/: AndroidManifest.xml
android-service/src/androidTest/java/com/example/android_service/: ExampleInstrumentedTest.kt
android-service/src/main/: AndroidManifest.xml
android-service/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-service/src/main/cpp/conf/: export.c  inst.c  inst.h
android-service/src/main/cpp/io/connection/bluetooth/: bluetooth_connection.c  bluetooth_connection.h  bluetooth_radar.c  bluetooth_radar.h  setup.c
android-service/src/main/cpp/jvm/: jvm.c  jvm.h
android-service/src/main/cpp/log/: out.c  out.h
android-service/src/main/kotlin/com/github/kshulzh/mesh_net/android/core/: Instance.kt  export.kt
android-service/src/main/kotlin/com/github/kshulzh/mesh_net/android/core/bluetooth/: BlueToothC.kt  BluetoothChatService.kt  BluetoothConnection.kt  BluetoothRadar.kt  Constants.java
android-service/src/main/kotlin/com/github/kshulzh/mesh_net/android/vpn/: IPv4Packet.kt  LocalVpnService.kt  MainActivity.kt
android-service/src/main/res/drawable/: ic_launcher_background.xml
android-service/src/main/res/drawable-v24/: ic_launcher_foreground.xml
android-service/src/main/res/layout/: activity_main.xml
android-service/src/main/res/menu/: menu_main.xml
android-service/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android-service/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-service/src/main/res/values-night/: themes.xml
android-service/src/test/java/com/example/android_service/: ExampleUnitTest.kt
android-service/src/test/java/com/github/kshulzh/mesh_net/android/vpn/: IPv4PacketTest.kt
api/: build.gradle.kts
core/: CMakeLists.txt  build.gradle.kts
core-c/: CMakeLists.txt  build.gradle.kts
core-c/src/: CMakeLists.txt
core-c/src/c/: CMakeLists.txt
core-c/src/c/containers/: list.c
core-c/src/c/devices/: device.c
core-c/src/c/handler/: handler_router.c
core-c/src/c/io/: buffer.c
core-c/src/c/io/connection/: connection.c  connection_buffered.c
core-c/src/c/io/readers/: readers.c
core-c/src/c/io/writers/: writers.c
core-c/src/c/log/: connection_logger.c  instance_logger.c  logger.c
core-c/src/c/messages/: message.c
core-c/src/c/model/: graph.c  instance.c
core-c/src/c/services/: handler.c  message.c  utils.c
core-c/src/c/services/connection/: functions.c  handlers.c  messages.c
core-c/src/c/services/route/: functions.c  handlers.c  messages.c
core-c/src/c/services/spread/: functions.c  handlers.c  messages.c
core-c/src/c/utils/: predicate.c
core-c/src/headers/containers/: array.h  list.h  map.h  pair.h
core-c/src/headers/devices/: connected_device.h  device.h
core-c/src/headers/handler/: handler_router.h
core-c/src/headers/io/: buffer.h
core-c/src/headers/io/connection/: connection.h  connection_buffered.h  radar.h  udp_connection.h
core-c/src/headers/io/readers/: readers.h
core-c/src/headers/io/writers/: writers.h
core-c/src/headers/log/: connection_logger.h  instance_logger.h  logger.h
core-c/src/headers/messages/: Message.h  MessageType.h  connection_message.h  message.h  route_message.h
core-c/src/headers/model/: graph.h  instance.h
core-c/src/headers/models/: graph.h  instance.h
core-c/src/headers/services/: handler.h  handlers.h  message.h  utils.h
core-c/src/headers/services/connection/: functions.h  handlers.h  messages.h
core-c/src/headers/services/route/: functions.h  handlers.h  messages.h
core-c/src/headers/services/spread/: functions.h  handlers.h  messages.h
core-c/src/headers/utils/: dynamic.h  malloc.h  math.h  new.h  predicate.h
core-c/test/: CMakeLists.txt
core-c/test-api/: CMakeLists.txt
core-c/test-api/c/: CMakeLists.txt
core-c/test-api/c/devices/: mock_device.c
core-c/test-api/c/io/: buffer_utils.c
core-c/test-api/c/io/connection/: mock_connection.c  mock_radar.c
core-c/test-api/headers/devices/: mock_device.h
core-c/test-api/headers/io/: buffer_utils.h
core-c/test-api/headers/io/connection/: mock_connection.h  mock_radar.h
core-c/test/containers/: list.cpp
core-c/test/devices/: mock_device.h
core-c/test/io/connection/: mock_connection.cpp  mock_connection.h  mock_radar.cpp  mock_radar.h
core-c/test/io/readers/: reader.cpp
core-c/test/io/writers/: writers.cpp
core-c/test/model/: graph.cpp  instance.cpp
core-c/test/services/connection/: tests.cpp
core-c/test/services/route/: tests.cpp
core-c/test/services/spread/: tests.cpp
core/src/: CMakeLists.txt
core/src/cpp/: CMakeLists.txt  example.cpp
core/src/headers/io/readers/: Reader.cpp  Reader.h  readers.h
core/src/headers/io/writers/: writers.h
core/src/headers/messages/: Message.h
core/src/main/public/messages/: Message.h  message_type.h
core/src/test/cpp/: hello_test.cpp
core/test/: CMakeLists.txt
core/test/io/readers/: reader.cpp
core/test/io/writers/: writer.cpp
